--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,7 @@ position: relative;
   
 width: 100%;
 height: 150px;
+object-fit: cover;
 
 }
 
@@ -80,14 +81,14 @@ div h2{
 
 
 .vertical-line { 
-  padding-left: 60px;
+  
   border-left: 2px solid black;
   height: 150px;
 }
 
 .vertical-line-2 { 
   border-left: 2px solid black;
-  height: 800px;
+  height: 750px;
 }
 .vertical-line3 { 
   padding-right: 220px;
@@ -97,7 +98,7 @@ div h2{
 
 
 main p {
- 
+  padding-left: 60px;
   width: 100%;
 }
 .portfolio-img {
@@ -110,7 +111,7 @@ main p {
 .port-container {
  padding-right: 265px;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto;
   grid-template-areas: 
   "a a"
@@ -143,7 +144,7 @@ main p {
 
 .project1 img {
     width: 100%;
-    height: 350px;
+    height: 300px;
 }
 
 .project1, .project2, .project3, .project4, .project5, h1 {
@@ -177,8 +178,8 @@ p {
 }
 
 
-@media only screen and (max-width: 830px) {
-  /* .project1 img {
-    height: 100px;
-  } */
-}
+@media (max-width: 600px) {
+
+  
+
+  }
