--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  
+
   margin: 0;
   padding: 0;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -16,17 +16,17 @@ header nav {
 
   padding-top: 0;
   margin-right: 0;
- /* float: right; */
+  /* float: right; */
 }
 
 header nav ul li {
-  
+
   display: inline-block;
   margin-left: 25px;
 }
 
-body h1{
- 
+body h1 {
+
   border-top: 100px;
   color: darkcyan;
 }
@@ -39,10 +39,11 @@ body h1{
 
 .container {
 
-position: relative;
+  position: relative;
 
 }
-.text-container{
+
+.text-container {
 
   position: absolute;
   bottom: 10%;
@@ -51,113 +52,67 @@ position: relative;
 }
 
 .bgimage {
-  
-width: 100%;
-height: 150px;
-object-fit: cover;
+
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
 
 }
 
 
-div h2{
+div h2 {
   color: darkcyan;
 }
 
-.page-section{
+.page-section {
 
   display: flex;
-  flex: auto 1 2;
-  justify-content: space-between;
+  justify-content: center;
   padding: 20px;
 
-  
+
 }
-
-.page-section contact {
-
-  display: flex;
-  justify-content: space-between;
-}
-
-
-.vertical-line { 
-  
-  border-left: 2px solid black;
-  height: 150px;
-}
-
-.vertical-line-2 { 
-  border-left: 2px solid black;
-  height: 750px;
-}
-.vertical-line3 { 
-  padding-left: 210px;
-  border-left: 2px solid black;
-  height: 90px;
-}
-
 
 main p {
   padding-left: 60px;
   width: 100%;
 }
-.portfolio-img {
-
-  width: 400px;
-  height: 120px;
-  object-fit: cover;
-}
 
 .port-container {
- padding-right: 265px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto;
-  grid-template-areas: 
-  "a a"
-  "b c"
-  "d e";
- 
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
 
-.led {
-  grid-area: a;
-  
-}
+.project-row {
+  display: flex;
+  flex-direction: row;
 
-.calculator {
-  grid-area: b;
-
-}
-.pastel {
-  grid-area: c;
-}
-
-.surf {
-  grid-area: d;
-}
-
-.run {
-  grid-area: e;
+  padding: 20px;
 
 }
 
-.project1 img {
-    width: 100%;
-    height: 300px;
-}
+.project-column {
+  display: flex;
+  flex-direction: column;
 
-.project1, .project2, .project3, .project4, .project5, h1 {
+  padding: 20px;
+  flex: 1;
   position: relative;
- bottom: 60px;
 }
 
 
-.contact-item{
-  
- display: grid;
- grid-template-columns: auto auto auto auto;
-  width: 72%;
+.project-column a {
+  display: block;
+  position: absolute;
+  left: 15px;
+  bottom: 15%;
+}
+
+.project-column img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 #link {
@@ -177,10 +132,32 @@ p {
   margin: 0;
 }
 
+.headline-section {
+  display: flex;
+  border-right: 3px solid black;
+  padding: 30px;
+  flex: 1;
+}
 
-@media only screen and (max-width: 606px) {
 
-  
+
+.content-section {
+  display: flex;
+  padding: 30px;
+  flex: 4;
+
+}
+
+.contact-section {
+  display: flex;
+  padding: 30px;
+  flex: 4;
+}
+
+
+
+@media (max-width:700px) {
+  a {
+    color: blue;
   }
-
-  
+}
