--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,9 +32,10 @@ body h1 {
 }
 
 .header-container {
-  background-color: black;
+  background-color: white;
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 
 .container {
@@ -130,6 +131,17 @@ h6 {
 
 p {
   margin: 0;
+}
+
+.avatar {
+vertical-align: middle;
+  width: 60px;
+  height: 50px;
+  border-radius: 50%;
+  position: absolute;
+  left: 23%;
+  bottom: 1.5px;
+
 }
 
 .headline-section {
